Dev_mythip@capgemini.com_17Dec_ForGitSync/src/objects/Offer__c.object
<CustomObject>
    <fields>
        <fullName>Candidate_Name__c</fullName>
        <formula>Job_Application__r.Candidate__r.Name &amp; &quot; &quot; &amp;  Job_Application__r.Candidate__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Application</label>
        <referenceTo>Job_Application__c</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_offers__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of offers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_Date__c</fullName>
        <label>Offer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <formula>Job_Application__r.Position__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Offer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Off-{0000}</displayFormat>
        <label>Offer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>